# zap

./: package.json  polyfill.yml  selene.toml
cli/: Cargo.toml
cli/src/: main.rs
zap/: Cargo.toml
zap/src/: config.rs  lib.rs
zap/src/irgen/: des.rs  mod.rs  ser.rs
zap/src/output/: mod.rs  tooling.rs
zap/src/output/luau/: base.luau  client.rs  mod.rs  server.rs  types.rs
zap/src/output/typescript/: client.rs  mod.rs  server.rs  types.rs
zap/src/parser/: convert.rs  grammar.lalrpop  mod.rs  reports.rs  syntax_tree.rs
zap/tests/: mod.rs
zap/tests/files/: bitpacking.zap  call_default.zap  function.zap  function_mutiple_rets.zap  function_two_unnamed_parameters.zap  include_profile_labels.zap  many_assorted.zap  many_reliables.zap  many_unreliables.zap  namespaces.zap  nested_complex.zap  no_data.zap  or_complex.zap  or_simple.zap  or_unknown.zap  polling.zap  recursive.zap  regression_153.zap  regression_184.zap  regression_197.zap  simple_struct.zap  string_kinds.zap  struct_quoted_fields.zap  tagged_enum_quoted.zap  tuples.zap  typescript_enum.zap  unit_enum_quoted.zap
zap/tests/irgen/: mod.rs  polyfill.luau
zap/tests/irgen/snapshots/: unbounded_recursive_type.snap
zap/tests/lune/: base.luau  mod.rs
zap/tests/lune/snapshots/: run_lune_test@bitpacking.snap  run_lune_test@call_default.snap  run_lune_test@include_profile_labels.snap  run_lune_test@many_assorted.snap  run_lune_test@many_reliables.snap  run_lune_test@many_unreliables.snap  run_lune_test@namespaces.snap  run_lune_test@nested_complex.snap  (+13 more)
zap/tests/selene/: checker.rs  mod.rs
(+120 files in other folders)
